--- a/LAB1.html
+++ b/LAB1.html
@@ -3,7 +3,7 @@
 <head>
   <title>LAB1</title>
   <meta charset="UTF-8" />
-  <meta name="description" content="Short description of this page" />
+  <meta name="description" content="Add and delete rows" />
   <meta name="author" content="Niraj Bhandari" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="keywords" content="HTML,Javascript Lab 1" />
